--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,33 @@
+/*
+This file is part of Moodle - http://moodle.org/
+
+Moodle is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+Moodle is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+
+ *
+ * styles used in coursesuite_api block.
+ *
+ * @package    block_coursesuite_api
+ * @copyright  2020 tim st.clair
+ * @license   http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
+ */
+
 .block.block_coursesuite_api .unlist .column {
 	display: inline-block;
 }
 
+.block.block_coursesuite_api .unlist .column.icon,
 .block.block_coursesuite_api .unlist .column.icon > img.icon {
-	width: 24px;
-	height: 24px;
+	width: 48px;
+	height: 48px;
 }
